--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.typesafe:config:1.3.1'
+    testCompile 'io.kotlintest:kotlintest:1.3.5'
 }
 
 sourceSets {
