--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ sudo: false
 jdk:
     - oraclejdk8
 script:
-    - ./gradlew test
+    - ./gradlew test jacocoTestReport
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
