--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'jacoco'
 
 repositories {
     mavenCentral()
@@ -24,4 +26,12 @@ dependencies {
 sourceSets {
     main.kotlin.srcDirs += 'src/main'
     test.kotlin.srcDirs += 'src/test'
+}
+
+jacocoTestReport {
+    reports {
+        html.enabled = false
+        xml.enabled = true
+        csv.enabled = false
+    }
 }
