--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,14 @@ jdk:
   
 script:
   - ./gradlew test jacocoTestReport
+  
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
     
 after_success:
   - bash <(curl -s https://codecov.io/bash)
