--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,26 @@
-sudo: false
+matrix:
+  include:
+    # Ubuntu 12.04 LTS
+    - os: linux
+      dist: precise
+      sudo: false
+      jdk: oraclejdk8
+    # Ubuntu 14.04 LTS
+    - os: linux
+      dist: trusty
+      sudo: false
+      jdk: oraclejdk8
+    # macOS 10.12
+    - os: osx
+      osx_image: xcode8.2
+    # OS X 10.11
+    - os: osx
+      osx_image: xcode7.3
+    # OS X 10.10
+    - os: osx
+      osx_image: xcode6.4
 
 language: java
-jdk:
-  - oraclejdk8
   
 script:
   - ./gradlew test jacocoTestReport
