--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,37 @@
-language: java
+matrix:
+  include:
+    # Ubuntu 14.04 LTS
+    - os: linux
+      dist: trusty
+      jdk: oraclejdk8
+    # Ubuntu 12.04 LTS
+    - os: linux
+      dist: precise
+      jdk: oraclejdk8
+    # macOS 10.12
+    - os: osx
+      osx_image: xcode8.2
+    # OS X 10.11
+    - os: osx
+      osx_image: xcode7.3
+    # OS X 10.10
+    - os: osx
+      osx_image: xcode6.4
+
 sudo: false
-jdk:
-  - oraclejdk8
+
+language: java
+  
 script:
   - ./gradlew test jacocoTestReport
+  
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    
 after_success:
   - bash <(curl -s https://codecov.io/bash)
