--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.typesafe:config:1.3.3'
     compile 'javax.inject:javax.inject:1'
 
+    testCompile "org.jetbrains.kotlin:kotlin-test"
     testCompile "com.google.inject:guice:4.2.0"
     testCompile "org.jetbrains.spek:spek-api:1.1.5"
     testRuntimeOnly "org.jetbrains.spek:spek-junit-platform-engine:1.1.5"
