--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,15 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'com.typesafe:config:1.3.3'
-    testCompile 'io.kotlintest:kotlintest:1.3.5'
+    testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.8'
 }
 
 sourceSets {
