--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.51'
+    ext.kotlin_version = '1.2.60'
     repositories {
         mavenCentral()
         jcenter()
@@ -29,6 +29,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     compile 'com.typesafe:config:1.3.3'
+    compile 'com.google.guava:guava:26.0-jre'
     testCompile 'io.kotlintest:kotlintest-runner-junit5:3.1.8'
 }
 
