add tests for complex generics

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 #IntelliJ IDEA
 .idea
 #Gradle
-.gradle
-build/
 gradle.properties
 
 # Created by https://www.gitignore.io/api/gradle,intellij
@@ -35,9 +33,9 @@ gradle.properties
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
 # auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
+.idea/modules.xml
+.idea/*.iml
+.idea/modules
 
 # CMake
 cmake-build-*/
