--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,14 @@ test {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     api 'com.typesafe:config:1.3.3'
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.1.8'
+    testImplementation 'com.atlassian.commonmark:commonmark:0.13.1'
+
+    testImplementation "org.jetbrains.kotlin:kotlin-script-util:$kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
 }
 
 sourceSets {
