Support Java 13 as used in CI

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ sourceSets {
     test.kotlin.srcDirs += 'src/test'
 }
 
+jacoco {
+    toolVersion = "0.8.5"
+}
+
 jacocoTestReport {
     reports {
         html.enabled = false
