--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.9.2'
+        classpath 'com.novoda:bintray-release:0.8.0'
         classpath 'org.jetbrains.dokka:dokka-gradle-plugin:0.9.9'
     }
 }
@@ -64,13 +64,17 @@ task javadocJar(type: Jar, dependsOn: dokkaJavadoc) {
     from "$buildDir/tmp/kdoc"
 }
 
+afterEvaluate {
+    mavenSourcesJar.dependsOn javadocJar
+}
+
 publish {
     userOrg = 'config4k'
     repoName = 'config4k'
     groupId = 'io.github.config4k'
     artifactId = 'config4k'
-    publishVersion = '0.4.2'
-    desc = 'A Typesafe Config wrapper for Kotlin'
+    publishVersion = '0.4.1'
+    description = 'A Typesafe Config wrapper for Kotlin'
     website = 'https://github.com/config4k/config4k'
     licences = ['Apache-2.0']
     issueTracker = 'https://github.com/config4k/config4k/issues'
