Use default Gradle source layout

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -5,6 +5,9 @@ categories:
   - title: ':bug: Bug Fixes'
     labels:
       - 'bug'
+  - title: ':toolbox: Maintenance'
+    labels:
+      - 'maintenance'
   - title: ':dart: Dependencies'
     labels:
       - 'dependencies'
