Change name default branch to `main`

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,5 +64,5 @@ deploy:
       -PossrhPassword="$OSS_PASSWORD"
     skip_cleanup: true
     on:
-      branch: master
+      branch: main
       tags: false
