Change commit message for Renovate Bot

--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,7 @@
   ],
   "labels": [
     "dependencies"
-  ]
+  ],
+  "commitMessageTopic": "`{{depName}}`",
+  "commitMessageExtra": "to `{{#if isPinDigest}}{{{newDigestShort}}}{{else}}{{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{newVersion}}}{{else}}{{#if newValue}}{{{newValue}}}{{else}}{{{newDigestShort}}}{{/if}}{{/if}}{{/if}}{{/if}}` (was `{{currentVersion}}`)"
 }
