--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
   # Run Gradle Wrapper Validation to verify the wrapper's checksum
-  gradle_validation:
+  gradle-validation:
     name: Gradle Wrapper
     runs-on: ubuntu-latest
     steps:
@@ -31,7 +31,7 @@ jobs:
   check:
     name: Build
     runs-on: ubuntu-latest
-    needs: gradle_validation
+    needs: gradle-validation
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -51,3 +51,29 @@ jobs:
         run: ./gradlew clean check --no-daemon
 
       - uses: codecov/codecov-action@v3
+
+  docs:
+    name: Validate docs
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          # we don't know what commit the last tag was it's safer to get entire repo so previousStableVersion resolves
+          fetch-depth: 0
+          ref: ${{ inputs.ref }}
+
+      # Use GitHub Actions' cache to shorten build times and decrease load on servers
+      - uses: actions/cache@v2
+        with:
+         path: docs/vendor/bundle
+         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
+         restore-keys: |
+           ${{ runner.os }}-gems-
+
+      # Specify the Jekyll source location as a parameter
+      - uses: helaili/jekyll-action@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          jekyll_src: 'docs'
+          build_only: true
