--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   # Run Gradle Wrapper Validation to verify the wrapper's checksum
-  gradle_validation:
+  gradle-validation:
     name: Gradle Wrapper
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +23,7 @@ jobs:
   publish-artifacts:
     name: Publish Artifacts
     runs-on: ubuntu-latest
-    needs: gradle_validation
+    needs: gradle-validation
     steps:
       - name: Checkout
         uses: actions/checkout@v3
