Configure baseurl for docs

--- a/.github/workflows/publish-releases.yml
+++ b/.github/workflows/publish-releases.yml
@@ -9,6 +9,7 @@ jobs:
   gradle-validation:
     name: Gradle Wrapper
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'config4k'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -23,6 +24,7 @@ jobs:
   publish-artifacts:
     name: Publish Artifacts
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'config4k'
     needs: gradle-validation
     steps:
       - name: Checkout
