--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,15 +6,15 @@ dokka = "1.7.10"
 nexus-publish = "1.1.0"
 typesafe-config = "1.4.2"
 kotest = "5.4.2"
-commonmark = "0.19.0"
+jgitver = "0.9.1"
 
 [libraries]
 typesafe-config = { group = "com.typesafe", name = "config", version.ref = "typesafe-config" }
 kotest = { group = "io.kotest", name = "kotest-runner-junit5-jvm", version.ref = "kotest" }
-commonmark = { group = "org.commonmark", name = "commonmark", version.ref = "commonmark" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "gradle-ktlint" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 nexus-publish = { id = "io.github.gradle-nexus.publish-plugin", version.ref = "nexus-publish" }
+jgitver = { id = "fr.brouillard.oss.gradle.jgitver", version.ref = "jgitver" }
