--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -21,9 +21,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          # we don't know what commit the last tag was it's safer to get entire repo so previousStableVersion resolves
+          # we don't know what commit the last tag was
           fetch-depth: 0
-          ref: ${{ inputs.ref }}
 
       - name: Gradle Wrapper Validation
         uses: gradle/wrapper-validation-action@v1
@@ -36,9 +35,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          # we don't know what commit the last tag was it's safer to get entire repo so previousStableVersion resolves
+          # we don't know what commit the last tag was
           fetch-depth: 0
-          ref: ${{ inputs.ref }}
 
       - uses: actions/setup-java@v3
         with:
@@ -59,9 +57,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          # we don't know what commit the last tag was it's safer to get entire repo so previousStableVersion resolves
+          # we don't know what commit the last tag was
           fetch-depth: 0
-          ref: ${{ inputs.ref }}
 
       # Use GitHub Actions' cache to shorten build times and decrease load on servers
       - uses: actions/cache@v3
