--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "1.9.21"
-ktlint = "0.45.2"
+ktlint = "1.0.1"
 gradle-ktlint = "12.0.2"
 dokka = "1.9.10"
 nexus-publish = "1.3.0"
@@ -12,6 +12,7 @@ binary-compatibility-validator = "0.13.2"
 [libraries]
 typesafe-config = { group = "com.typesafe", name = "config", version.ref = "typesafe-config" }
 kotest = { group = "io.kotest", name = "kotest-runner-junit5-jvm", version.ref = "kotest" }
+ktlint = { group = "com.pinterest.ktlint", name = "ktlint-bom", version.ref = "ktlint" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
