Submission only `runtimeClasspath` dependencies to GitHub

--- a/.github/workflows/dependency-graph.yml
+++ b/.github/workflows/dependency-graph.yml
@@ -23,4 +23,5 @@ jobs:
           ref: ${{ inputs.ref }}
       - name: Gradle Dependency Submission
         uses: mikepenz/gradle-dependency-submission@v0.9.1
-
+        with:
+          gradle-build-configuration: "runtimeClasspath"
