--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,9 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "config:recommended"
   ],
-  "ruby": {
-    "enabled": false
-  },
+  "enabledManagers": ["gradle-wrapper"],
   "labels": [
     "dependencies"
   ],
