--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -40,8 +40,8 @@ jobs:
 
       - uses: actions/setup-java@v5
         with:
-          distribution: 'adopt'
-          java-version: '8'
+          distribution: 'liberica'
+          java-version: '21'
           check-latest: true
           cache: 'gradle'
 
